Fix text-overflow for long role names on chrome.

--- a/public/common/client.css
+++ b/public/common/client.css
@@ -407,7 +407,7 @@ menu li:hover img {
 
 .role {
 	display: grid;
-	grid-template-columns: 1fr auto;
+	grid-template-columns: 1fr fit-content;
 	padding-top: 3px;
 	border-bottom: 1px solid black;
 	font-size: 16px;
@@ -423,7 +423,7 @@ menu li:hover img {
 	grid-column: 1;
 	padding-left: 4px;
 	white-space: nowrap;
-	overflow: clip;
+	overflow: hidden;
 	text-overflow: ellipsis;
 }
 
